--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -106,6 +106,12 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
 }
 
+.dark-mode .sidebar-btn:hover {
+  background-color: white;
+  cursor: pointer;
+  color: #333;
+}
+
 /* The rest of your existing styles */
 .navbar .d-flex {
   display: flex;
@@ -172,8 +178,10 @@
 
 /* Sidebar button hover effect */
 .sidebar-btn:hover {
-  background-color: #e9ecef;
+  background-color: #333;
+  /* background-color: #e9ecef; */
   cursor: pointer;
+  color: white;
 }
 
 .sidebar-btn {
