--- a/src/styles/WeatherDetails.css
+++ b/src/styles/WeatherDetails.css
@@ -2,9 +2,18 @@
 
 body {
   margin: 0;
-  font-family: "Poppins", sans-serif;
-  background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
-  color: #ffffff;
+  padding: 0;
+  min-height: 100vh;
+  background: linear-gradient(
+      to bottom,
+      rgba(30, 60, 114, 0.9),
+      rgba(42, 82, 152, 0.9)
+    ),
+    url("./weatherBG.jpg"); /* Adjust path */
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .weather-container {
@@ -20,12 +29,16 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 1000px;
-  background: rgba(255, 255, 255, 0.1);
+  height: 600px;
+  max-width: 10000px;
+
+  background: linear-gradient(#1e3c7299, #2a529899), url("./weatherBG.jpg"); /* Adjust path if needed */
+  background-size: cover;
+  background-position: center;
   backdrop-filter: blur(12px);
   border-radius: 20px;
   overflow: hidden;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 30px rgba(7, 147, 240, 0.2);
 }
 
 .weather-info {
@@ -105,7 +118,7 @@ body {
   margin: 0.2rem 0;
   padding: 0.4rem 0.8rem;
   border-radius: 6px;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(231, 230, 230, 0.1);
   cursor: pointer;
   transition: all 0.2s ease;
 }
@@ -142,4 +155,25 @@ body {
   .extra-panel {
     flex: 1;
   }
+}
+
+.weather-container {
+  position: relative;
+  z-index: 1;
+}
+
+.weather-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(
+    43deg,
+    /* #ffffff 1%, */ #4158d0 2%,
+    #2a5298 45%,
+    #1e3c72 58%
+  ); /* Tint for readability */
+  z-index: -1;
 }
